--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 */
 
 html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
@@ -59,7 +59,10 @@ mark {
 	background-color: transparent;
 	color: inherit;
 }
-
+iframe {
+    vertical-align: middle;
+    horizontal-align: middle;
+}
 input::-moz-focus-inner {
 	border: 0;
 	padding: 0;
